// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`WorkflowStatus Component matches snapshot for accepted status 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1j74uew-MuiPaper-root-MuiCard-root"
  style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
>
  <div
    class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
    >
      Workflow Status
    </h6>
    <div
      class="MuiBox-root css-1hd6tk"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1cth5tq-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-1x0mq5c-MuiTypography-root"
          >
            Current Status
          </h6>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorSuccess MuiChip-filledSuccess css-1fiq0pv-MuiChip-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconSmall MuiChip-iconColorSuccess css-1umw9bq-MuiSvgIcon-root"
              data-testid="DoneIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M9 16.2 4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4z"
              />
            </svg>
            <span
              class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
            >
              Accepted
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <div
            aria-orientation="vertical"
            class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiDivider-flexItem css-1160sub-MuiDivider-root"
            role="separator"
          />
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-bw1xwk-MuiTypography-root"
          >
            Assigned Sales Rep
          </h6>
          <div
            class="MuiBox-root css-axw7ok"
          >
            <div
              class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-uwb8ub-MuiAvatar-root"
            >
              J
              D
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
              >
                John
                 
                Doe
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
              >
                john@example.com
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiStepper-root MuiStepper-vertical css-fv1b65-MuiStepper-root"
    >
      <div
        class="MuiStep-root MuiStep-vertical Mui-completed css-enonti-MuiStep-root"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-vertical css-122jq7f-MuiStepLabel-root"
        >
          <span
            class="MuiStepLabel-iconContainer Mui-completed css-1b2ju2j-MuiStepLabel-iconContainer"
          >
            <div
              class="MuiBox-root css-1rw9eyx"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="AssignmentIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 3h-4.18C14.4 1.84 13.3 1 12 1s-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1m2 14H7v-2h7zm3-4H7v-2h10zm0-4H7V7h10z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
          >
            <span
              class="MuiStepLabel-label Mui-completed css-12eb3rq-MuiStepLabel-label"
            >
              <div
                class="MuiBox-root css-0"
              >
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 css-12e9vy6-MuiTypography-root"
                >
                  Submitted
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                >
                  Customer has submitted their inventory for review
                </p>
              </div>
            </span>
          </span>
        </span>
        <div
          class="MuiStepContent-root css-69uykz-MuiStepContent-root"
        />
      </div>
      <div
        class="MuiStepConnector-root MuiStepConnector-vertical Mui-completed css-1afu6qk-MuiStepConnector-root"
      >
        <span
          class="MuiStepConnector-line MuiStepConnector-lineVertical css-1deaddp-MuiStepConnector-line"
        />
      </div>
      <div
        class="MuiStep-root MuiStep-vertical Mui-completed css-enonti-MuiStep-root"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-vertical css-122jq7f-MuiStepLabel-root"
        >
          <span
            class="MuiStepLabel-iconContainer Mui-completed css-1b2ju2j-MuiStepLabel-iconContainer"
          >
            <div
              class="MuiBox-root css-1rw9eyx"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="PersonIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4m0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
          >
            <span
              class="MuiStepLabel-label Mui-completed css-12eb3rq-MuiStepLabel-label"
            >
              <div
                class="MuiBox-root css-0"
              >
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 css-12e9vy6-MuiTypography-root"
                >
                  Assigned
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                >
                  Inventory has been assigned to a sales representative
                </p>
                <span
                  class="MuiTypography-root MuiTypography-caption css-1jt6fx3-MuiTypography-root"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                    data-testid="ScheduleIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8"
                    />
                    <path
                      d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                    />
                  </svg>
                  1/15/2024, 10:00:00 AM
                </span>
              </div>
            </span>
          </span>
        </span>
        <div
          class="MuiStepContent-root css-69uykz-MuiStepContent-root"
        />
      </div>
      <div
        class="MuiStepConnector-root MuiStepConnector-vertical Mui-completed css-1afu6qk-MuiStepConnector-root"
      >
        <span
          class="MuiStepConnector-line MuiStepConnector-lineVertical css-1deaddp-MuiStepConnector-line"
        />
      </div>
      <div
        class="MuiStep-root MuiStep-vertical Mui-completed css-enonti-MuiStep-root"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-vertical css-122jq7f-MuiStepLabel-root"
        >
          <span
            class="MuiStepLabel-iconContainer Mui-completed css-1b2ju2j-MuiStepLabel-iconContainer"
          >
            <div
              class="MuiBox-root css-1rw9eyx"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="CheckCircleIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
          >
            <span
              class="MuiStepLabel-label Mui-completed css-12eb3rq-MuiStepLabel-label"
            >
              <div
                class="MuiBox-root css-0"
              >
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 css-12e9vy6-MuiTypography-root"
                >
                  Verified
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                >
                  Sales rep has verified items and dimensions on-site
                </p>
              </div>
            </span>
          </span>
        </span>
        <div
          class="MuiStepContent-root css-69uykz-MuiStepContent-root"
        />
      </div>
      <div
        class="MuiStepConnector-root MuiStepConnector-vertical Mui-completed css-1afu6qk-MuiStepConnector-root"
      >
        <span
          class="MuiStepConnector-line MuiStepConnector-lineVertical css-1deaddp-MuiStepConnector-line"
        />
      </div>
      <div
        class="MuiStep-root MuiStep-vertical Mui-completed css-enonti-MuiStep-root"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-vertical css-122jq7f-MuiStepLabel-root"
        >
          <span
            class="MuiStepLabel-iconContainer Mui-completed css-1b2ju2j-MuiStepLabel-iconContainer"
          >
            <div
              class="MuiBox-root css-1rw9eyx"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="AttachMoneyIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
          >
            <span
              class="MuiStepLabel-label Mui-completed css-12eb3rq-MuiStepLabel-label"
            >
              <div
                class="MuiBox-root css-0"
              >
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 css-12e9vy6-MuiTypography-root"
                >
                  Quoted
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                >
                  Final quote has been provided to customer
                </p>
              </div>
            </span>
          </span>
        </span>
        <div
          class="MuiStepContent-root css-69uykz-MuiStepContent-root"
        />
      </div>
      <div
        class="MuiStepConnector-root MuiStepConnector-vertical Mui-active css-1afu6qk-MuiStepConnector-root"
      >
        <span
          class="MuiStepConnector-line MuiStepConnector-lineVertical css-1deaddp-MuiStepConnector-line"
        />
      </div>
      <div
        class="MuiStep-root MuiStep-vertical css-enonti-MuiStep-root"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-vertical css-122jq7f-MuiStepLabel-root"
        >
          <span
            class="MuiStepLabel-iconContainer Mui-active css-1b2ju2j-MuiStepLabel-iconContainer"
          >
            <div
              class="MuiBox-root css-1kf7s8u"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="DoneIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9 16.2 4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
          >
            <span
              class="MuiStepLabel-label Mui-active css-12eb3rq-MuiStepLabel-label"
            >
              <div
                class="MuiBox-root css-0"
              >
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 css-or3kzz-MuiTypography-root"
                >
                  Accepted
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                >
                  Customer has accepted the final quote
                </p>
              </div>
            </span>
          </span>
        </span>
        <div
          class="MuiStepContent-root MuiStepContent-last css-1r4r9eo-MuiStepContent-root"
        >
          <div
            class="MuiCollapse-root MuiCollapse-vertical MuiStepContent-transition MuiCollapse-entered css-scib18-MuiCollapse-root-MuiStepContent-transition"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WorkflowStatus Component matches snapshot for customer view 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1j74uew-MuiPaper-root-MuiCard-root"
  style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
>
  <div
    class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
    >
      Workflow Status
    </h6>
    <div
      class="MuiBox-root css-1hd6tk"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1cth5tq-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-1x0mq5c-MuiTypography-root"
          >
            Current Status
          </h6>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorWarning MuiChip-filledWarning css-se6ndb-MuiChip-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconSmall MuiChip-iconColorWarning css-1umw9bq-MuiSvgIcon-root"
              data-testid="AttachMoneyIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4"
              />
            </svg>
            <span
              class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
            >
              Quoted
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <div
            aria-orientation="vertical"
            class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiDivider-flexItem css-1160sub-MuiDivider-root"
            role="separator"
          />
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-bw1xwk-MuiTypography-root"
          >
            Assigned Sales Rep
          </h6>
          <div
            class="MuiBox-root css-axw7ok"
          >
            <div
              class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-uwb8ub-MuiAvatar-root"
            >
              J
              D
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
              >
                John
                 
                Doe
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
              >
                john@example.com
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiStepper-root MuiStepper-vertical css-fv1b65-MuiStepper-root"
    >
      <div
        class="MuiStep-root MuiStep-vertical Mui-completed css-enonti-MuiStep-root"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-vertical css-122jq7f-MuiStepLabel-root"
        >
          <span
            class="MuiStepLabel-iconContainer Mui-completed css-1b2ju2j-MuiStepLabel-iconContainer"
          >
            <div
              class="MuiBox-root css-1rw9eyx"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="AssignmentIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 3h-4.18C14.4 1.84 13.3 1 12 1s-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1m2 14H7v-2h7zm3-4H7v-2h10zm0-4H7V7h10z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
          >
            <span
              class="MuiStepLabel-label Mui-completed css-12eb3rq-MuiStepLabel-label"
            >
              <div
                class="MuiBox-root css-0"
              >
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 css-12e9vy6-MuiTypography-root"
                >
                  Submitted
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                >
                  Customer has submitted their inventory for review
                </p>
              </div>
            </span>
          </span>
        </span>
        <div
          class="MuiStepContent-root css-69uykz-MuiStepContent-root"
        />
      </div>
      <div
        class="MuiStepConnector-root MuiStepConnector-vertical Mui-completed css-1afu6qk-MuiStepConnector-root"
      >
        <span
          class="MuiStepConnector-line MuiStepConnector-lineVertical css-1deaddp-MuiStepConnector-line"
        />
      </div>
      <div
        class="MuiStep-root MuiStep-vertical Mui-completed css-enonti-MuiStep-root"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-vertical css-122jq7f-MuiStepLabel-root"
        >
          <span
            class="MuiStepLabel-iconContainer Mui-completed css-1b2ju2j-MuiStepLabel-iconContainer"
          >
            <div
              class="MuiBox-root css-1rw9eyx"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="PersonIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4m0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
          >
            <span
              class="MuiStepLabel-label Mui-completed css-12eb3rq-MuiStepLabel-label"
            >
              <div
                class="MuiBox-root css-0"
              >
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 css-12e9vy6-MuiTypography-root"
                >
                  Assigned
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                >
                  Inventory has been assigned to a sales representative
                </p>
                <span
                  class="MuiTypography-root MuiTypography-caption css-1jt6fx3-MuiTypography-root"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                    data-testid="ScheduleIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8"
                    />
                    <path
                      d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                    />
                  </svg>
                  1/15/2024, 10:00:00 AM
                </span>
              </div>
            </span>
          </span>
        </span>
        <div
          class="MuiStepContent-root css-69uykz-MuiStepContent-root"
        />
      </div>
      <div
        class="MuiStepConnector-root MuiStepConnector-vertical Mui-completed css-1afu6qk-MuiStepConnector-root"
      >
        <span
          class="MuiStepConnector-line MuiStepConnector-lineVertical css-1deaddp-MuiStepConnector-line"
        />
      </div>
      <div
        class="MuiStep-root MuiStep-vertical Mui-completed css-enonti-MuiStep-root"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-vertical css-122jq7f-MuiStepLabel-root"
        >
          <span
            class="MuiStepLabel-iconContainer Mui-completed css-1b2ju2j-MuiStepLabel-iconContainer"
          >
            <div
              class="MuiBox-root css-1rw9eyx"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="CheckCircleIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
          >
            <span
              class="MuiStepLabel-label Mui-completed css-12eb3rq-MuiStepLabel-label"
            >
              <div
                class="MuiBox-root css-0"
              >
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 css-12e9vy6-MuiTypography-root"
                >
                  Verified
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                >
                  Sales rep has verified items and dimensions on-site
                </p>
              </div>
            </span>
          </span>
        </span>
        <div
          class="MuiStepContent-root css-69uykz-MuiStepContent-root"
        />
      </div>
      <div
        class="MuiStepConnector-root MuiStepConnector-vertical Mui-active css-1afu6qk-MuiStepConnector-root"
      >
        <span
          class="MuiStepConnector-line MuiStepConnector-lineVertical css-1deaddp-MuiStepConnector-line"
        />
      </div>
      <div
        class="MuiStep-root MuiStep-vertical css-enonti-MuiStep-root"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-vertical css-122jq7f-MuiStepLabel-root"
        >
          <span
            class="MuiStepLabel-iconContainer Mui-active css-1b2ju2j-MuiStepLabel-iconContainer"
          >
            <div
              class="MuiBox-root css-1kf7s8u"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="AttachMoneyIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
          >
            <span
              class="MuiStepLabel-label Mui-active css-12eb3rq-MuiStepLabel-label"
            >
              <div
                class="MuiBox-root css-0"
              >
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 css-or3kzz-MuiTypography-root"
                >
                  Quoted
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                >
                  Final quote has been provided to customer
                </p>
              </div>
            </span>
          </span>
        </span>
        <div
          class="MuiStepContent-root css-69uykz-MuiStepContent-root"
        >
          <div
            class="MuiCollapse-root MuiCollapse-vertical MuiStepContent-transition MuiCollapse-entered css-scib18-MuiCollapse-root-MuiStepContent-transition"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
              >
                <div
                  class="MuiBox-root css-1qm1lh"
                >
                  <div
                    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorInfo MuiAlert-standardInfo MuiAlert-standard css-k1p3sh-MuiPaper-root-MuiAlert-root"
                    role="alert"
                    style="--Paper-shadow: none;"
                  >
                    <div
                      class="MuiAlert-icon css-vab54s-MuiAlert-icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                        data-testid="InfoOutlinedIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20, 12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10, 10 0 0,0 12,2M11,17H13V11H11V17Z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiAlert-message css-zioonp-MuiAlert-message"
                    >
                      <div
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom MuiAlertTitle-root css-5ick94-MuiTypography-root-MuiAlertTitle-root"
                      >
                        Quote Ready
                      </div>
                      Your final quote has been prepared. Please review and accept or request changes.
                    </div>
                  </div>
                  <div
                    class="MuiBox-root css-zf2lak"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSuccess MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSuccess MuiButton-root MuiButton-contained MuiButton-containedSuccess MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSuccess css-1elmdwi-MuiButtonBase-root-MuiButton-root"
                      tabindex="0"
                      type="button"
                    >
                      Accept Quote
                    </button>
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedError MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorError MuiButton-root MuiButton-outlined MuiButton-outlinedError MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorError css-1hz6i2n-MuiButtonBase-root-MuiButton-root"
                      tabindex="0"
                      type="button"
                    >
                      Request Changes
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiStepConnector-root MuiStepConnector-vertical Mui-disabled css-1afu6qk-MuiStepConnector-root"
      >
        <span
          class="MuiStepConnector-line MuiStepConnector-lineVertical css-1deaddp-MuiStepConnector-line"
        />
      </div>
      <div
        class="MuiStep-root MuiStep-vertical css-enonti-MuiStep-root"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-vertical Mui-disabled css-122jq7f-MuiStepLabel-root"
        >
          <span
            class="MuiStepLabel-iconContainer Mui-disabled css-1b2ju2j-MuiStepLabel-iconContainer"
          >
            <div
              class="MuiBox-root css-1l2zanj"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="DoneIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9 16.2 4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
          >
            <span
              class="MuiStepLabel-label Mui-disabled css-12eb3rq-MuiStepLabel-label"
            >
              <div
                class="MuiBox-root css-0"
              >
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 css-12e9vy6-MuiTypography-root"
                >
                  Accepted
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                >
                  Customer has accepted the final quote
                </p>
              </div>
            </span>
          </span>
        </span>
        <div
          class="MuiStepContent-root MuiStepContent-last css-1r4r9eo-MuiStepContent-root"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`WorkflowStatus Component matches snapshot for submitted status 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1j74uew-MuiPaper-root-MuiCard-root"
  style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
>
  <div
    class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
    >
      Workflow Status
    </h6>
    <div
      class="MuiBox-root css-1hd6tk"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1cth5tq-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-1x0mq5c-MuiTypography-root"
          >
            Current Status
          </h6>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorInfo MuiChip-filledInfo css-16lfvse-MuiChip-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconSmall MuiChip-iconColorInfo css-1umw9bq-MuiSvgIcon-root"
              data-testid="AssignmentIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 3h-4.18C14.4 1.84 13.3 1 12 1s-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1m2 14H7v-2h7zm3-4H7v-2h10zm0-4H7V7h10z"
              />
            </svg>
            <span
              class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
            >
              Submitted
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <div
            aria-orientation="vertical"
            class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiDivider-flexItem css-1160sub-MuiDivider-root"
            role="separator"
          />
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-bw1xwk-MuiTypography-root"
          >
            Assigned Sales Rep
          </h6>
          <div
            class="MuiBox-root css-axw7ok"
          >
            <div
              class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-uwb8ub-MuiAvatar-root"
            >
              J
              D
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
              >
                John
                 
                Doe
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
              >
                john@example.com
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiStepper-root MuiStepper-vertical css-fv1b65-MuiStepper-root"
    >
      <div
        class="MuiStep-root MuiStep-vertical css-enonti-MuiStep-root"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-vertical css-122jq7f-MuiStepLabel-root"
        >
          <span
            class="MuiStepLabel-iconContainer Mui-active css-1b2ju2j-MuiStepLabel-iconContainer"
          >
            <div
              class="MuiBox-root css-1kf7s8u"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="AssignmentIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 3h-4.18C14.4 1.84 13.3 1 12 1s-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1m2 14H7v-2h7zm3-4H7v-2h10zm0-4H7V7h10z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
          >
            <span
              class="MuiStepLabel-label Mui-active css-12eb3rq-MuiStepLabel-label"
            >
              <div
                class="MuiBox-root css-0"
              >
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 css-or3kzz-MuiTypography-root"
                >
                  Submitted
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                >
                  Customer has submitted their inventory for review
                </p>
              </div>
            </span>
          </span>
        </span>
        <div
          class="MuiStepContent-root css-69uykz-MuiStepContent-root"
        >
          <div
            class="MuiCollapse-root MuiCollapse-vertical MuiStepContent-transition MuiCollapse-entered css-scib18-MuiCollapse-root-MuiStepContent-transition"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiStepConnector-root MuiStepConnector-vertical Mui-disabled css-1afu6qk-MuiStepConnector-root"
      >
        <span
          class="MuiStepConnector-line MuiStepConnector-lineVertical css-1deaddp-MuiStepConnector-line"
        />
      </div>
      <div
        class="MuiStep-root MuiStep-vertical css-enonti-MuiStep-root"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-vertical Mui-disabled css-122jq7f-MuiStepLabel-root"
        >
          <span
            class="MuiStepLabel-iconContainer Mui-disabled css-1b2ju2j-MuiStepLabel-iconContainer"
          >
            <div
              class="MuiBox-root css-1l2zanj"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="PersonIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4m0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
          >
            <span
              class="MuiStepLabel-label Mui-disabled css-12eb3rq-MuiStepLabel-label"
            >
              <div
                class="MuiBox-root css-0"
              >
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 css-12e9vy6-MuiTypography-root"
                >
                  Assigned
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                >
                  Inventory has been assigned to a sales representative
                </p>
                <span
                  class="MuiTypography-root MuiTypography-caption css-1jt6fx3-MuiTypography-root"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                    data-testid="ScheduleIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8"
                    />
                    <path
                      d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                    />
                  </svg>
                  1/15/2024, 10:00:00 AM
                </span>
              </div>
            </span>
          </span>
        </span>
        <div
          class="MuiStepContent-root css-69uykz-MuiStepContent-root"
        />
      </div>
      <div
        class="MuiStepConnector-root MuiStepConnector-vertical Mui-disabled css-1afu6qk-MuiStepConnector-root"
      >
        <span
          class="MuiStepConnector-line MuiStepConnector-lineVertical css-1deaddp-MuiStepConnector-line"
        />
      </div>
      <div
        class="MuiStep-root MuiStep-vertical css-enonti-MuiStep-root"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-vertical Mui-disabled css-122jq7f-MuiStepLabel-root"
        >
          <span
            class="MuiStepLabel-iconContainer Mui-disabled css-1b2ju2j-MuiStepLabel-iconContainer"
          >
            <div
              class="MuiBox-root css-1l2zanj"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="CheckCircleIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
          >
            <span
              class="MuiStepLabel-label Mui-disabled css-12eb3rq-MuiStepLabel-label"
            >
              <div
                class="MuiBox-root css-0"
              >
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 css-12e9vy6-MuiTypography-root"
                >
                  Verified
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                >
                  Sales rep has verified items and dimensions on-site
                </p>
              </div>
            </span>
          </span>
        </span>
        <div
          class="MuiStepContent-root css-69uykz-MuiStepContent-root"
        />
      </div>
      <div
        class="MuiStepConnector-root MuiStepConnector-vertical Mui-disabled css-1afu6qk-MuiStepConnector-root"
      >
        <span
          class="MuiStepConnector-line MuiStepConnector-lineVertical css-1deaddp-MuiStepConnector-line"
        />
      </div>
      <div
        class="MuiStep-root MuiStep-vertical css-enonti-MuiStep-root"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-vertical Mui-disabled css-122jq7f-MuiStepLabel-root"
        >
          <span
            class="MuiStepLabel-iconContainer Mui-disabled css-1b2ju2j-MuiStepLabel-iconContainer"
          >
            <div
              class="MuiBox-root css-1l2zanj"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="AttachMoneyIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
          >
            <span
              class="MuiStepLabel-label Mui-disabled css-12eb3rq-MuiStepLabel-label"
            >
              <div
                class="MuiBox-root css-0"
              >
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 css-12e9vy6-MuiTypography-root"
                >
                  Quoted
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                >
                  Final quote has been provided to customer
                </p>
              </div>
            </span>
          </span>
        </span>
        <div
          class="MuiStepContent-root css-69uykz-MuiStepContent-root"
        />
      </div>
      <div
        class="MuiStepConnector-root MuiStepConnector-vertical Mui-disabled css-1afu6qk-MuiStepConnector-root"
      >
        <span
          class="MuiStepConnector-line MuiStepConnector-lineVertical css-1deaddp-MuiStepConnector-line"
        />
      </div>
      <div
        class="MuiStep-root MuiStep-vertical css-enonti-MuiStep-root"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-vertical Mui-disabled css-122jq7f-MuiStepLabel-root"
        >
          <span
            class="MuiStepLabel-iconContainer Mui-disabled css-1b2ju2j-MuiStepLabel-iconContainer"
          >
            <div
              class="MuiBox-root css-1l2zanj"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="DoneIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9 16.2 4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
          >
            <span
              class="MuiStepLabel-label Mui-disabled css-12eb3rq-MuiStepLabel-label"
            >
              <div
                class="MuiBox-root css-0"
              >
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 css-12e9vy6-MuiTypography-root"
                >
                  Accepted
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                >
                  Customer has accepted the final quote
                </p>
              </div>
            </span>
          </span>
        </span>
        <div
          class="MuiStepContent-root MuiStepContent-last css-1r4r9eo-MuiStepContent-root"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`WorkflowStatus Component matches snapshot for verified status 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1j74uew-MuiPaper-root-MuiCard-root"
  style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
>
  <div
    class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
    >
      Workflow Status
    </h6>
    <div
      class="MuiBox-root css-1hd6tk"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1cth5tq-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-1x0mq5c-MuiTypography-root"
          >
            Current Status
          </h6>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorSuccess MuiChip-filledSuccess css-1fiq0pv-MuiChip-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconSmall MuiChip-iconColorSuccess css-1umw9bq-MuiSvgIcon-root"
              data-testid="CheckCircleIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
              />
            </svg>
            <span
              class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
            >
              Verified
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <div
            aria-orientation="vertical"
            class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiDivider-flexItem css-1160sub-MuiDivider-root"
            role="separator"
          />
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-bw1xwk-MuiTypography-root"
          >
            Assigned Sales Rep
          </h6>
          <div
            class="MuiBox-root css-axw7ok"
          >
            <div
              class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-uwb8ub-MuiAvatar-root"
            >
              J
              D
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
              >
                John
                 
                Doe
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
              >
                john@example.com
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiStepper-root MuiStepper-vertical css-fv1b65-MuiStepper-root"
    >
      <div
        class="MuiStep-root MuiStep-vertical Mui-completed css-enonti-MuiStep-root"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-vertical css-122jq7f-MuiStepLabel-root"
        >
          <span
            class="MuiStepLabel-iconContainer Mui-completed css-1b2ju2j-MuiStepLabel-iconContainer"
          >
            <div
              class="MuiBox-root css-1rw9eyx"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="AssignmentIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 3h-4.18C14.4 1.84 13.3 1 12 1s-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1m2 14H7v-2h7zm3-4H7v-2h10zm0-4H7V7h10z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
          >
            <span
              class="MuiStepLabel-label Mui-completed css-12eb3rq-MuiStepLabel-label"
            >
              <div
                class="MuiBox-root css-0"
              >
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 css-12e9vy6-MuiTypography-root"
                >
                  Submitted
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                >
                  Customer has submitted their inventory for review
                </p>
              </div>
            </span>
          </span>
        </span>
        <div
          class="MuiStepContent-root css-69uykz-MuiStepContent-root"
        />
      </div>
      <div
        class="MuiStepConnector-root MuiStepConnector-vertical Mui-completed css-1afu6qk-MuiStepConnector-root"
      >
        <span
          class="MuiStepConnector-line MuiStepConnector-lineVertical css-1deaddp-MuiStepConnector-line"
        />
      </div>
      <div
        class="MuiStep-root MuiStep-vertical Mui-completed css-enonti-MuiStep-root"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-vertical css-122jq7f-MuiStepLabel-root"
        >
          <span
            class="MuiStepLabel-iconContainer Mui-completed css-1b2ju2j-MuiStepLabel-iconContainer"
          >
            <div
              class="MuiBox-root css-1rw9eyx"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="PersonIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4m0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
          >
            <span
              class="MuiStepLabel-label Mui-completed css-12eb3rq-MuiStepLabel-label"
            >
              <div
                class="MuiBox-root css-0"
              >
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 css-12e9vy6-MuiTypography-root"
                >
                  Assigned
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                >
                  Inventory has been assigned to a sales representative
                </p>
                <span
                  class="MuiTypography-root MuiTypography-caption css-1jt6fx3-MuiTypography-root"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                    data-testid="ScheduleIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8"
                    />
                    <path
                      d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                    />
                  </svg>
                  1/15/2024, 10:00:00 AM
                </span>
              </div>
            </span>
          </span>
        </span>
        <div
          class="MuiStepContent-root css-69uykz-MuiStepContent-root"
        />
      </div>
      <div
        class="MuiStepConnector-root MuiStepConnector-vertical Mui-active css-1afu6qk-MuiStepConnector-root"
      >
        <span
          class="MuiStepConnector-line MuiStepConnector-lineVertical css-1deaddp-MuiStepConnector-line"
        />
      </div>
      <div
        class="MuiStep-root MuiStep-vertical css-enonti-MuiStep-root"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-vertical css-122jq7f-MuiStepLabel-root"
        >
          <span
            class="MuiStepLabel-iconContainer Mui-active css-1b2ju2j-MuiStepLabel-iconContainer"
          >
            <div
              class="MuiBox-root css-1kf7s8u"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="CheckCircleIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
          >
            <span
              class="MuiStepLabel-label Mui-active css-12eb3rq-MuiStepLabel-label"
            >
              <div
                class="MuiBox-root css-0"
              >
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 css-or3kzz-MuiTypography-root"
                >
                  Verified
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                >
                  Sales rep has verified items and dimensions on-site
                </p>
              </div>
            </span>
          </span>
        </span>
        <div
          class="MuiStepContent-root css-69uykz-MuiStepContent-root"
        >
          <div
            class="MuiCollapse-root MuiCollapse-vertical MuiStepContent-transition MuiCollapse-entered css-scib18-MuiCollapse-root-MuiStepContent-transition"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiStepConnector-root MuiStepConnector-vertical Mui-disabled css-1afu6qk-MuiStepConnector-root"
      >
        <span
          class="MuiStepConnector-line MuiStepConnector-lineVertical css-1deaddp-MuiStepConnector-line"
        />
      </div>
      <div
        class="MuiStep-root MuiStep-vertical css-enonti-MuiStep-root"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-vertical Mui-disabled css-122jq7f-MuiStepLabel-root"
        >
          <span
            class="MuiStepLabel-iconContainer Mui-disabled css-1b2ju2j-MuiStepLabel-iconContainer"
          >
            <div
              class="MuiBox-root css-1l2zanj"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="AttachMoneyIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
          >
            <span
              class="MuiStepLabel-label Mui-disabled css-12eb3rq-MuiStepLabel-label"
            >
              <div
                class="MuiBox-root css-0"
              >
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 css-12e9vy6-MuiTypography-root"
                >
                  Quoted
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                >
                  Final quote has been provided to customer
                </p>
              </div>
            </span>
          </span>
        </span>
        <div
          class="MuiStepContent-root css-69uykz-MuiStepContent-root"
        />
      </div>
      <div
        class="MuiStepConnector-root MuiStepConnector-vertical Mui-disabled css-1afu6qk-MuiStepConnector-root"
      >
        <span
          class="MuiStepConnector-line MuiStepConnector-lineVertical css-1deaddp-MuiStepConnector-line"
        />
      </div>
      <div
        class="MuiStep-root MuiStep-vertical css-enonti-MuiStep-root"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-vertical Mui-disabled css-122jq7f-MuiStepLabel-root"
        >
          <span
            class="MuiStepLabel-iconContainer Mui-disabled css-1b2ju2j-MuiStepLabel-iconContainer"
          >
            <div
              class="MuiBox-root css-1l2zanj"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="DoneIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9 16.2 4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
          >
            <span
              class="MuiStepLabel-label Mui-disabled css-12eb3rq-MuiStepLabel-label"
            >
              <div
                class="MuiBox-root css-0"
              >
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 css-12e9vy6-MuiTypography-root"
                >
                  Accepted
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                >
                  Customer has accepted the final quote
                </p>
              </div>
            </span>
          </span>
        </span>
        <div
          class="MuiStepContent-root MuiStepContent-last css-1r4r9eo-MuiStepContent-root"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`WorkflowStatus Component matches snapshot without assigned sales rep 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1j74uew-MuiPaper-root-MuiCard-root"
  style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
>
  <div
    class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
    >
      Workflow Status
    </h6>
    <div
      class="MuiBox-root css-1hd6tk"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1cth5tq-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-1x0mq5c-MuiTypography-root"
          >
            Current Status
          </h6>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorInfo MuiChip-filledInfo css-16lfvse-MuiChip-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconSmall MuiChip-iconColorInfo css-1umw9bq-MuiSvgIcon-root"
              data-testid="AssignmentIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 3h-4.18C14.4 1.84 13.3 1 12 1s-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1m2 14H7v-2h7zm3-4H7v-2h10zm0-4H7V7h10z"
              />
            </svg>
            <span
              class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
            >
              Submitted
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiStepper-root MuiStepper-vertical css-fv1b65-MuiStepper-root"
    >
      <div
        class="MuiStep-root MuiStep-vertical css-enonti-MuiStep-root"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-vertical css-122jq7f-MuiStepLabel-root"
        >
          <span
            class="MuiStepLabel-iconContainer Mui-active css-1b2ju2j-MuiStepLabel-iconContainer"
          >
            <div
              class="MuiBox-root css-1kf7s8u"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="AssignmentIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 3h-4.18C14.4 1.84 13.3 1 12 1s-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1m2 14H7v-2h7zm3-4H7v-2h10zm0-4H7V7h10z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
          >
            <span
              class="MuiStepLabel-label Mui-active css-12eb3rq-MuiStepLabel-label"
            >
              <div
                class="MuiBox-root css-0"
              >
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 css-or3kzz-MuiTypography-root"
                >
                  Submitted
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                >
                  Customer has submitted their inventory for review
                </p>
              </div>
            </span>
          </span>
        </span>
        <div
          class="MuiStepContent-root css-69uykz-MuiStepContent-root"
        >
          <div
            class="MuiCollapse-root MuiCollapse-vertical MuiStepContent-transition MuiCollapse-entered css-scib18-MuiCollapse-root-MuiStepContent-transition"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiStepConnector-root MuiStepConnector-vertical Mui-disabled css-1afu6qk-MuiStepConnector-root"
      >
        <span
          class="MuiStepConnector-line MuiStepConnector-lineVertical css-1deaddp-MuiStepConnector-line"
        />
      </div>
      <div
        class="MuiStep-root MuiStep-vertical css-enonti-MuiStep-root"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-vertical Mui-disabled css-122jq7f-MuiStepLabel-root"
        >
          <span
            class="MuiStepLabel-iconContainer Mui-disabled css-1b2ju2j-MuiStepLabel-iconContainer"
          >
            <div
              class="MuiBox-root css-1l2zanj"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="PersonIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4m0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
          >
            <span
              class="MuiStepLabel-label Mui-disabled css-12eb3rq-MuiStepLabel-label"
            >
              <div
                class="MuiBox-root css-0"
              >
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 css-12e9vy6-MuiTypography-root"
                >
                  Assigned
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                >
                  Inventory has been assigned to a sales representative
                </p>
                <span
                  class="MuiTypography-root MuiTypography-caption css-1jt6fx3-MuiTypography-root"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                    data-testid="ScheduleIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8"
                    />
                    <path
                      d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                    />
                  </svg>
                  1/15/2024, 10:00:00 AM
                </span>
              </div>
            </span>
          </span>
        </span>
        <div
          class="MuiStepContent-root css-69uykz-MuiStepContent-root"
        />
      </div>
      <div
        class="MuiStepConnector-root MuiStepConnector-vertical Mui-disabled css-1afu6qk-MuiStepConnector-root"
      >
        <span
          class="MuiStepConnector-line MuiStepConnector-lineVertical css-1deaddp-MuiStepConnector-line"
        />
      </div>
      <div
        class="MuiStep-root MuiStep-vertical css-enonti-MuiStep-root"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-vertical Mui-disabled css-122jq7f-MuiStepLabel-root"
        >
          <span
            class="MuiStepLabel-iconContainer Mui-disabled css-1b2ju2j-MuiStepLabel-iconContainer"
          >
            <div
              class="MuiBox-root css-1l2zanj"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="CheckCircleIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
          >
            <span
              class="MuiStepLabel-label Mui-disabled css-12eb3rq-MuiStepLabel-label"
            >
              <div
                class="MuiBox-root css-0"
              >
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 css-12e9vy6-MuiTypography-root"
                >
                  Verified
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                >
                  Sales rep has verified items and dimensions on-site
                </p>
              </div>
            </span>
          </span>
        </span>
        <div
          class="MuiStepContent-root css-69uykz-MuiStepContent-root"
        />
      </div>
      <div
        class="MuiStepConnector-root MuiStepConnector-vertical Mui-disabled css-1afu6qk-MuiStepConnector-root"
      >
        <span
          class="MuiStepConnector-line MuiStepConnector-lineVertical css-1deaddp-MuiStepConnector-line"
        />
      </div>
      <div
        class="MuiStep-root MuiStep-vertical css-enonti-MuiStep-root"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-vertical Mui-disabled css-122jq7f-MuiStepLabel-root"
        >
          <span
            class="MuiStepLabel-iconContainer Mui-disabled css-1b2ju2j-MuiStepLabel-iconContainer"
          >
            <div
              class="MuiBox-root css-1l2zanj"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="AttachMoneyIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
          >
            <span
              class="MuiStepLabel-label Mui-disabled css-12eb3rq-MuiStepLabel-label"
            >
              <div
                class="MuiBox-root css-0"
              >
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 css-12e9vy6-MuiTypography-root"
                >
                  Quoted
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                >
                  Final quote has been provided to customer
                </p>
              </div>
            </span>
          </span>
        </span>
        <div
          class="MuiStepContent-root css-69uykz-MuiStepContent-root"
        />
      </div>
      <div
        class="MuiStepConnector-root MuiStepConnector-vertical Mui-disabled css-1afu6qk-MuiStepConnector-root"
      >
        <span
          class="MuiStepConnector-line MuiStepConnector-lineVertical css-1deaddp-MuiStepConnector-line"
        />
      </div>
      <div
        class="MuiStep-root MuiStep-vertical css-enonti-MuiStep-root"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-vertical Mui-disabled css-122jq7f-MuiStepLabel-root"
        >
          <span
            class="MuiStepLabel-iconContainer Mui-disabled css-1b2ju2j-MuiStepLabel-iconContainer"
          >
            <div
              class="MuiBox-root css-1l2zanj"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="DoneIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9 16.2 4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
          >
            <span
              class="MuiStepLabel-label Mui-disabled css-12eb3rq-MuiStepLabel-label"
            >
              <div
                class="MuiBox-root css-0"
              >
                <h6
                  class="MuiTypography-root MuiTypography-subtitle1 css-12e9vy6-MuiTypography-root"
                >
                  Accepted
                </h6>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                >
                  Customer has accepted the final quote
                </p>
              </div>
            </span>
          </span>
        </span>
        <div
          class="MuiStepContent-root MuiStepContent-last css-1r4r9eo-MuiStepContent-root"
        />
      </div>
    </div>
  </div>
</div>
`;
